custom-deploy.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
 name: custom-deployment 
 labels: 
   app: custom 
spec: 
 replicas: 1
 selector: 
   matchLabels: 
     app: custom 
 template : 
   metadata : 
     labels: 
       app: custom 
   spec: 
     containers: 
     - name: customs 
       image: abhisheksahu2022/iitcapstoneproject1:latest
       ports: 
       - containerPort: 80
