custom-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: my-custom 
spec: 
   type: ClusterIP 
   ports: 
     - targetPort: 80 
       port: 80 
   selector: 
       app: custom
