ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata: 
   name: casestudy 
   annotations: 
       nginx.ingress.kubernetes.io/rewrite-target: / 
spec: 
  rules: 
  - http: 
      paths: 
      - path: /custom 
        pathType: Prefix 
        backend: 
          service: 
            name: my-custom
            port: 
              number: 80
